Mensagem de commmit

--- a/esportes/futebol/index.html
+++ b/esportes/futebol/index.html
@@ -5,13 +5,14 @@
     <title>Futebol - Loja Esportiva Campeã</title>
 </head>
 <body>
-    <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
+    <img src="/imgs/logo.jpg" alt="Logo da Loja" width="150">
     <h1>Loja Esportiva Campeã - Futebol</h1>
 
     <nav>
-        <a href="../index.html">Início</a> |
-        <a href="../basquete/index.html">Basquete</a> |
-        <a href="../volei/index.html">Vôlei</a>
+        <a href="/index.html">Início</a> |
+        <a href="/esportes/basquete/index.html">Basquete</a> |
+        <a href="/esportes/futebol/index.html">Futebol</a> |
+        <a href="/esportes/volei/index.html">Vôlei</a>
     </nav>
 
     <h2>Sobre o Futebol</h2>
@@ -21,17 +22,17 @@
     <h2>Produtos de Futebol</h2>
     <ul>
         <li>
-            <img src="../imgs/bola_futebol.jpg" width="150"><br>
+            <img src="/imgs/Bola de Futebol Topper.webp" width="150"><br>
             Bola de Futebol Topper - R$ 99,00<br>
             Tamanho: 5
         </li>
         <li>
-            <img src="../imgs/chuteira.jpg" width="150"><br>
+            <img src="/imgs/345275-1200-auto.webp" width="150"><br>
             Chuteira Profissional - R$ 220,00<br>
             Tamanhos: 37 ao 45
         </li>
         <li>
-            <img src="../imgs/camisa_futebol.jpg" width="150"><br>
+            <img src="/imgs/FBA-4759-310_zoom2.webp" width="150"><br>
             Camisa Time Oficial - R$ 180,00<br>
             Tamanhos: P, M, G, GG
         </li>
