--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Loja Esportiva Campeã</title>
 </head>
 <body>
-    <img src="imgs/logo.png" alt="Logo da Loja" width="150">
+    <img src="imgs/logo.jpg" alt="Logo da Loja" width="150">
     <h1>Loja Esportiva Campeã</h1>
 
     <nav>
-        <a href="basquete/index.html">Basquete</a> |
-        <a href="futebol/index.html">Futebol</a> |
-        <a href="volei/index.html">Vôlei</a>
+        <a href="/index.html">Início</a> |
+        <a href="/esportes/basquete/index.html">Basquete</a> |
+        <a href="/esportes/futebol/index.html">Futebol</a> |
+        <a href="/esportes/volei/index.html">Vôlei</a>
     </nav>
 
     <h2>Produto em Destaque</h2>
