Mensagem de commmit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Loja Esportiva Campeã</title>
+    <title>Loja Esportiva TopSport</title>
 </head>
 <body>
     <img src="imgs/logo.jpg" alt="Logo da Loja" width="150">
