Mensagem de commmit

--- a/esportes/basquete/index.html
+++ b/esportes/basquete/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="../imgs/logo.jpg" alt="Logo da Loja" width="150">
+    <img src="/imgs/logo.jpg" alt="Logo da Loja" width="150">
     <h1>Loja Esportiva Campeã - Basquete</h1>
 
     <nav>
@@ -35,7 +35,7 @@
             Tamanhos: 38 ao 44
         </li>
         <li>
-            <img src="/imgs/Camiseta Regata NB.jfif" width="150"><br>
+            <img src="/imgs/Camiseta Regata NBA.avif" width="150"><br>
             Camiseta Regata NBA - R$ 99,00<br>
             Tamanhos: P, M, G, GG
         </li>
