--- a/esportes/futebol/index.html
+++ b/esportes/futebol/index.html
@@ -27,12 +27,12 @@
             Tamanho: 5
         </li>
         <li>
-            <img src="/imgs/345275-1200-auto.webp" width="150"><br>
+            <img src="/imgs/Chuteira Profissional .webp" width="150"><br>
             Chuteira Profissional - R$ 220,00<br>
             Tamanhos: 37 ao 45
         </li>
         <li>
-            <img src="/imgs/FBA-4759-310_zoom2.webp" width="150"><br>
+            <img src="/imgs/Camisa Time Oficial.webp" width="150"><br>
             Camisa Time Oficial - R$ 180,00<br>
             Tamanhos: P, M, G, GG
         </li>
