--- a/esportes/volei/index.html
+++ b/esportes/volei/index.html
@@ -22,17 +22,17 @@
     <h2>Produtos de Vôlei</h2>
     <ul>
         <li>
-            <img src="../imgs/bola_volei.jpg" width="150"><br>
+            <img src="/imgs/Bola de Vôlei Mikasa.jpg" width="150"><br>
             Bola de Vôlei Mikasa - R$ 130,00<br>
             Tamanho: Oficial
         </li>
         <li>
-            <img src="../imgs/joelheira_volei.jpg" width="150"><br>
+            <img src="/imgs/Joelheira Esportiva.webp" width="150"><br>
             Joelheira Esportiva - R$ 45,00<br>
             Tamanhos: M, G, GG
         </li>
         <li>
-            <img src="../imgs/camisa_volei.jpg" width="150"><br>
+            <img src="/imgs/Camisa de Vôlei Profissional.png" width="150"><br>
             Camisa de Vôlei Profissional - R$ 110,00<br>
             Tamanhos: P, M, G
         </li>
