--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </nav>
 
     <h2>Produto em Destaque</h2>
-    <a href="basquete/index.html">
-        <img src="imgs/produto1.jpg" alt="Produto em destaque" width="200">
+    <a href="volei/index.html">
+        <img src="/imgs/Camisa de Vôlei Profissional.png" alt="Produto em destaque" width="200">
     </a>
 
     <h2>Sobre a Loja</h2>
     <p>Vendemos materiais esportivos de qualidade para diversos esportes!</p>
 
     <h2>Onde Estamos</h2>
-    <iframe src="https://www.google.com/maps/embed?..." width="400" height="300" allowfullscreen></iframe>
+    <iframe src="//www.google.com/maps/embed?pb=!4v1749598675147!6m8!1m7!1sPFRtjYjroeTlGq2wcedyCQ!2m2!1d-16.16819736875506!2d-42.31121270823548!3f112.94299001680437!4f12.848424592267648!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="400" height="300" allowfullscreen></iframe>
 
     <h2>Formas de Pagamento</h2>
     <ul>
@@ -35,8 +35,8 @@
 
     <h2>Proprietários</h2>
     <ul>
-        <li>Seu Nome Aqui</li>
-        <li>Outro Nome</li>
+        <li>Luick Eduardo Neres Costa</li>
+        <li>Otelo</li>
     </ul>
 </body>
 </html>
