--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Esportiva TopSport</title>
 </head>
 <body>
-    <img src="imgs/logo.jpg" alt="Logo da Loja" width="150">
-    <h1>Loja Esportiva Campeã</h1>
+    <img src="imgs/logo.jpg" alt="Logo da Loja" width="250">
+
+    <h1>TopSport - Loja Esportiva</h1>
 
     <nav>
         <a href="/index.html">Início</a> |
@@ -16,15 +18,15 @@
     </nav>
 
     <h2>Produto em Destaque</h2>
-    <a href="volei/index.html">
-        <img src="/imgs/Camisa de Vôlei Profissional.png" alt="Produto em destaque" width="200">
+    <a href="/esportes/volei/index.html">
+        <img src="/imgs/Camisa de Vôlei Profissional.png" alt="Produto em destaque - Camisa de Vôlei Profissional" width="200">
     </a>
 
     <h2>Sobre a Loja</h2>
     <p>Vendemos materiais esportivos de qualidade para diversos esportes!</p>
 
     <h2>Onde Estamos</h2>
-    <iframe src="//www.google.com/maps/embed?pb=!4v1749598675147!6m8!1m7!1sPFRtjYjroeTlGq2wcedyCQ!2m2!1d-16.16819736875506!2d-42.31121270823548!3f112.94299001680437!4f12.848424592267648!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="400" height="300" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!4v1749598675147!6m8!1m7!1sPFRtjYjroeTlGq2wcedyCQ!2m2!1d-16.16819736875506!2d-42.31121270823548!3f112.94299001680437!4f12.848424592267648!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <h2>Formas de Pagamento</h2>
     <ul>
